# VkClient

./: .travis.yml  CMakeLists.txt  README.md
examples/: main.cpp
include/vk/: client.hpp
sources/: client.cpp
tests/: catch.hpp  check.cpp  check_all.cpp  validInit.hpp
